1. Extracting relevant methods (instead of files in the previous commit) as oracle. 2. Reimplementing the main experiment codes 1) Use relevant methods for a bug as the positive training samples. 2) Use train_on_batch() to replace fit() to reduce memory space.

--- a/NeeDLes.ini
+++ b/NeeDLes.ini
@@ -2,9 +2,11 @@
 its_file_path = C:/Users/dell/Dropbox/NeeDLes/data/Hyloc_data/Tomcat.xls
 project_dir_path = C:/Users/dell/tomcat
 code_index_path = C:/Users/dell/Dropbox/NeeDLes/data/Hyloc_data/Tomcat_index
-code_content_path = C:/Users/dell/Dropbox/NeeDLes/data/Hyloc_data/Tomcat_code_content
-bug_content_path = C:/Users/dell/Dropbox/NeeDLes/data/Hyloc_data/Tomcat_bug_content
-oracle_path = C:/Users/dell/Dropbox/NeeDLes/data/Hyloc_data/Tomcat_oracle
+code_contents_path = C:/Users/dell/Dropbox/NeeDLes/data/Hyloc_data/Tomcat_code_content
+bug_contents_path = C:/Users/dell/Dropbox/NeeDLes/data/Hyloc_data/Tomcat_bug_content
+file_oracle_path = C:/Users/dell/Dropbox/NeeDLes/data/Hyloc_data/Tomcat_oracle
+code_mappings_path = C:/Users/dell/Dropbox/NeeDLes/data/Hyloc_data/tomcat_mappings_code.txt
+method_oracle_path = C:/Users/dell/Dropbox/NeeDLes/data/Hyloc_data/tomcat_relevant_methods.txt
 evaluation_path = C:/Users/dell/Dropbox/NeeDLes/data/Hyloc_data/evaluation
 
 [oracle_generator]
@@ -18,7 +20,7 @@ neg_sample_number = 20
 [oracle_reader]
 vocabulary_size = 50
 split_ratio = 0.8
-max_lstm_length = 100
+lstm_seq_length = 200
 
 [network_structure]
 lstm_core_length = 32
@@ -36,7 +38,6 @@ decay = 0.0
 rho_1 = 0.9
 dropout = 0.8
 nb_epoch = 100
-batch_size = 32
 
 [evaluation_options]
 k_value = 10
