--- a/NeeDLes_linux.ini
+++ b/NeeDLes_linux.ini
@@ -4,7 +4,9 @@ project_dir_path = C:/Users/dell/tomcat
 code_index_path = /home/qiuchi/data/Hyloc_data/Tomcat_index
 code_content_path = /home/qiuchi/data/Hyloc_data/Tomcat_code_content
 bug_content_path = /home/qiuchi/data/Hyloc_data/Tomcat_bug_content
-oracle_path = /home/qiuchi/data/Hyloc_data/Tomcat_oracle
+file_oracle_path = /home/qiuchi/data/Hyloc_data/Tomcat_oracle
+code_mappings_path = /home/qiuchi/data/Hyloc_data/tomcat_mappings_code.txt
+method_oracle_path = /home/qiuchi/data/Hyloc_data/tomcat_relevant_methods.txtn
 evaluation_path = /home/qiuchi/data/Hyloc_data/evaluation
 
 [oracle_generator]
@@ -16,9 +18,9 @@ parse_options = 11
 neg_sample_number = 20
 
 [oracle_reader]
-vocabulary_size = 300
+vocabulary_size = 50
 split_ratio = 0.8
-max_lstm_length = 100
+lstm_seq_length = 200
 
 [network_structure]
 lstm_core_length = 32
@@ -36,7 +38,6 @@ decay = 0.0
 rho_1 = 0.9
 dropout = 0.8
 nb_epoch = 100
-batch_size = 32
 
 [evaluation_options]
 k_value = 10
