Adding an option for saving the model to directory

--- a/NeeDLes_linux.ini
+++ b/NeeDLes_linux.ini
@@ -6,7 +6,8 @@ code_content_path = /home/qiuchi/data/Hyloc_data/Tomcat_code_content
 bug_content_path = /home/qiuchi/data/Hyloc_data/Tomcat_bug_content
 file_oracle_path = /home/qiuchi/data/Hyloc_data/Tomcat_oracle
 code_mappings_path = /home/qiuchi/data/Hyloc_data/tomcat_mappings_code.txt
-method_oracle_path = /home/qiuchi/data/Hyloc_data/tomcat_relevant_methods.txtn
+method_oracle_path = /home/qiuchi/data/Hyloc_data/tomcat_relevant_methods.txt
+model_dir_path = /home/qiuchi/data/Hyloc_data/model_tomcat
 evaluation_path = /home/qiuchi/data/Hyloc_data/evaluation
 
 [oracle_generator]
