--- a/NeeDLes.ini
+++ b/NeeDLes.ini
@@ -7,6 +7,7 @@ bug_contents_path = C:/Users/dell/Dropbox/NeeDLes/data/Hyloc_data/Tomcat_bug_con
 file_oracle_path = C:/Users/dell/Dropbox/NeeDLes/data/Hyloc_data/Tomcat_oracle
 code_mappings_path = C:/Users/dell/Dropbox/NeeDLes/data/Hyloc_data/tomcat_mappings_code.txt
 method_oracle_path = C:/Users/dell/Dropbox/NeeDLes/data/Hyloc_data/tomcat_relevant_methods.txt
+model_dir_path = C:/Users/dell/Dropbox/NeeDLes/data/Hyloc_data/model_tomcat
 evaluation_path = C:/Users/dell/Dropbox/NeeDLes/data/Hyloc_data/evaluation
 
 [oracle_generator]
