--- a/config/NeeDLes_tomcat.ini
+++ b/config/NeeDLes_tomcat.ini
@@ -18,10 +18,10 @@ bug_contents_path = ../data/Tomcat/Tomcat_bug_content
 file_oracle_path = ../data/Tomcat/Tomcat_oracle
 
 #The file storing changed methods for each commit
-code_mappings_path = ../data/Tomcat/tomcat_mappings_code.txt
+code_mappings_path = ../data/Tomcat/Tomcat_mappings_code
 
 #The file storing all relevant methods for each bug
-method_oracle_path = ../data/Tomcat/tomcat_relevant_methods.txt
+method_oracle_path = ../data/Tomcat/Tomcat_relevant_methods
 
 #The directory storing neural network structures and weights
 model_dir_path = ../model/model_tomcat
@@ -36,7 +36,7 @@ issue_field = both
 
 #The number of negative samples
 #Given a bug, the codes with the highest Lucene TFIDFsimilarity scores are selected as the negative samples
-neg_sample_number = 20
+neg_sample_number = 5
 
 ##### text preprocessing options #####
 # whether to split camel case
@@ -55,10 +55,10 @@ stop_word_remove = true
 filter_word_length = true
 
 #if yes, length less than this value will be filtered out
-min_word_length = 0
+min_word_length = 2
 
 #if yes, length greater than this value will be filtered out
-max_word_length = 20
+max_word_length = 12
 
 #whether to keep punctuations
 keep_punctuation = true
@@ -86,6 +86,9 @@ split_ratio = 0.8
 
 # the input lstm length, each bug and code sequence is zero-padded or truncated to this length
 lstm_seq_length = 200
+
+# the embedding dimension
+embedding_dimension = 64
 
 [network_structure]
 # the lstm unit length
