model file generated.

--- a/config/NeeDLes_tomcat.ini
+++ b/config/NeeDLes_tomcat.ini
@@ -18,16 +18,16 @@ bug_contents_path = ../data/Tomcat/Tomcat_bug_content
 file_oracle_path = ../data/Tomcat/Tomcat_oracle
 
 #The file storing changed methods for each commit
-code_mappings_path = ../data/Tomcat/Tomcat_mappings_code
+code_mappings_path = ../data/Tomcat/tomcat_mappings_code.txt
 
 #The file storing all relevant methods for each bug
 method_oracle_path = ../data/Tomcat/Tomcat_relevant_methods
 
 #The directory storing neural network structures and weights
-model_dir_path = ../model/model_tomcat
+model_dir_path = ../model/model_tomcat_embedding
 
 #The file containing evaluation results
-evaluation_path = ../eval/eval_tomcat
+evaluation_path = ../eval/eval_tomcat_embedding
 
 [oracle_generator]
 
@@ -36,7 +36,7 @@ issue_field = both
 
 #The number of negative samples
 #Given a bug, the codes with the highest Lucene TFIDFsimilarity scores are selected as the negative samples
-neg_sample_number = 5
+neg_sample_number = 20
 
 ##### text preprocessing options #####
 # whether to split camel case
@@ -55,10 +55,10 @@ stop_word_remove = true
 filter_word_length = true
 
 #if yes, length less than this value will be filtered out
-min_word_length = 2
+min_word_length = 0
 
 #if yes, length greater than this value will be filtered out
-max_word_length = 12
+max_word_length = 20
 
 #whether to keep punctuations
 keep_punctuation = true
@@ -79,23 +79,25 @@ keep_comments = true
 
 [oracle_reader]
 # the vocabulary size
-vocabulary_size = 50
+vocabulary_size = 1500
 
 # the first split_ratio of bugs are used to train the model
 split_ratio = 0.8
 
+sample_num = 50
+
+neg_method_num = 10
+
+embedding_dimension = 128
 # the input lstm length, each bug and code sequence is zero-padded or truncated to this length
 lstm_seq_length = 200
-
-# the embedding dimension
-embedding_dimension = 64
 
 [network_structure]
 # the lstm unit length
 lstm_core_length = 32
 
 # the activation function for lstm output
-activation_function = tanh
+activation_function = relu
 
 # the activation function for lstm input
 inner_activation_function = hard_sigmoid
@@ -115,26 +117,26 @@ inner_initializer = orthogonal
 [training_options]
 ##### optimizer options #####
 
-optimizer = RMSprop
+optimizer = adam
 
-learning_rate = 0.0001
+#learning_rate = 0.0001
 
-epsilon = 1e-8
+#epsilon = 1e-8
 
-decay = 0.0
+#decay = 0.0
 
-rho_1 = 0.9
+#rho_1 = 0.9
 
 #dropout_rate for lstm unit
-dropout = 0.8
+dropout = 0.5
 
 #number of training epochs
-nb_epoch = 100
+nb_epoch = 30
 
 [evaluation_options]
 # number of k for the top-k metric
 k_value = 10
 
 #the threshold for judging relevance, for precision and recall metrics
-rel_threshold = 0.65
+rel_threshold = 0.5
 
