Generating LSTM siamese network with embedding layer

--- a/config/NeeDLes_tomcat.ini
+++ b/config/NeeDLes_tomcat.ini
@@ -18,7 +18,7 @@ bug_contents_path = ../data/Tomcat/Tomcat_bug_content
 file_oracle_path = ../data/Tomcat/Tomcat_oracle
 
 #The file storing changed methods for each commit
-code_mappings_path = ../data/Tomcat/tomcat_mappings_code.txt
+code_mappings_path = ../data/Tomcat/Tomcat_mappings_code
 
 #The file storing all relevant methods for each bug
 method_oracle_path = ../data/Tomcat/Tomcat_relevant_methods
@@ -36,7 +36,7 @@ issue_field = both
 
 #The number of negative samples
 #Given a bug, the codes with the highest Lucene TFIDFsimilarity scores are selected as the negative samples
-neg_sample_number = 20
+neg_sample_number = 5
 
 ##### text preprocessing options #####
 # whether to split camel case
@@ -131,7 +131,7 @@ optimizer = adam
 dropout = 0.5
 
 #number of training epochs
-nb_epoch = 30
+nb_epoch = 100
 
 [evaluation_options]
 # number of k for the top-k metric
